  - don't detect landing while climbing in a wave (#1330, #2289, #2406)
  - basic support for the contest "DMSt" (#2208)
* devices
  - LX: support flight download from LXNAV Nano
  - Android/IOIO: support BMP085 sensor (DroidSoar V2)
* user interface
  - preselect first item with details in map item list for
    faster access (#2069, #2207)
  - non-modal FLARM radar (with InfoBoxes and menu)
* infoboxes
  - added thermal assistant infobox

Version 6.4.3 - 2012/11/01
* devices
  - fix freeze bug on device reconnect
  - LXNAV Nano: fix crash in Nano configuration dialog
  - LXNAV V7: fix NMEA setup over Bluetooth
  - Colibri/LX20: fix LXN/FIL to IGC conversion (#2262)
* user interface
  - fix the download manager on Samsung phones

Version 6.4.2 - 2012/10/17
* calculations
  - contest: relax altitude difference check (#2348)
  - improve take-off and landing detection (#2391)
* devices
  - CAI302, B800: fix ballast command (#2387)
  - IOIO: fix baud rate switching, fixes LXNAV V7 and Volkslogger (#2277)
* data files
  - added polar of "Ka 6E" and corrected the "Ka 6CR" one (#2327)
  - added polars of "AK-8" and "Blanik L13-AC" (#2329)
* map
  - suspend the map renderer while thermal assistant is shown
* user interface
  - closing the XCSoar window cancels the current modal dialog (was
    broken on Windows)
  - fix off-by-one bug in combo list (#2382)
  - fix map updates in replay/simulator on Linux (#2236)
  - fix file manager on new XCSoarData directory
  - fix excess error messages in file manager (#2395)
  - validate UTF-8 in xcsoar-checklist.txt (#2396)

Version 6.4.1 - 2012/08/30
* calculations
  - fix "final GR" calculation (#2256)
  - improved great circle vector calculation precision
* map
  - new option to disable the wind arrow
* data files
  - increased arc airspace resolution for large radiuses
* devices
  - fix potential crash in I/O thread
  - fix date/time parsing in Flytec device driver
  - Volkslogger: fix task declaration over Bluetooth