@@ -29,6 +29,8 @@
 #include "Renderer/OZRenderer.hpp"
 #include "Renderer/TaskPointRenderer.hpp"
 #include "Renderer/TaskRenderer.hpp"
+#include "Renderer/FAISectorRenderer.hpp"
+#include "Look/AirspaceLook.hpp"
 #include "Engine/Task/Ordered/OrderedTask.hpp"
 #include "Engine/Task/Ordered/Points/OrderedTaskPoint.hpp"
 #include "MapSettings.hpp"
@@ -39,6 +41,59 @@
 #include "Screen/OpenGL/Scope.hpp"
 #endif
 
+gcc_pure
+static bool
+IsFAITriangleApplicable(TaskFactoryType factory)
+{
+  switch (factory) {
+  case TaskFactoryType::FAI_GENERAL:
+  case TaskFactoryType::FAI_TRIANGLE:
+  case TaskFactoryType::FAI_GOAL:
+  case TaskFactoryType::RACING:
+  case TaskFactoryType::MIXED:
+  case TaskFactoryType::TOURING:
+    return true;
+
+  case TaskFactoryType::FAI_OR:
+  case TaskFactoryType::AAT:
+    return false;
+  }
+
+  /* unreachable */
+  assert(false);
+  return false;
+}
+
+gcc_pure
+static bool
+IsFAITriangleApplicable(const OrderedTask &task)
+{
+  return IsFAITriangleApplicable(task.GetFactoryType()) &&
+    task.GetOptionalStartPointCount() == 0 &&
+    // TODO: allow start on first leg
+    task.TaskSize() >= 2 && task.TaskSize() <= 4;
+}
+
+static void
+RenderFAISectors(Canvas &canvas, const WindowProjection &projection,
+                 const OrderedTask &task)
+{
+  const unsigned size = task.TaskSize();
+  const unsigned end = size - 1;
+
+  for (unsigned i = 0; i != end; ++i)
+    RenderFAISector(canvas, projection,
+                    task.GetPoint(i).GetLocation(),
+                    task.GetPoint(i + 1).GetLocation(),
+                    true);
+
+  for (unsigned i = 0; i != end; ++i)
+    RenderFAISector(canvas, projection,
+                    task.GetPoint(i).GetLocation(),
+                    task.GetPoint(i + 1).GetLocation(),
+                    false);
+}
+
 static void
 PaintTask(Canvas &canvas, const WindowProjection &projection,
           const OrderedTask &task,
@@ -46,7 +101,8 @@ PaintTask(Canvas &canvas, const WindowProjection &projection,
           const MapSettings &settings_map,
           const TaskLook &task_look,
           const AirspaceLook &airspace_look,
-          const RasterTerrain *terrain, const Airspaces *airspaces)
+          const RasterTerrain *terrain, const Airspaces *airspaces,
+          bool fai_sectors)
 {
   BackgroundRenderer background;
   background.SetTerrain(terrain);
@@ -75,6 +131,35 @@ PaintTask(Canvas &canvas, const WindowProjection &projection,
   canvas.FadeToWhite(0xc0);
 #endif
 
+  if (fai_sectors && IsFAITriangleApplicable(task)) {
+    static constexpr Color fill_color = COLOR_YELLOW;
+#ifdef ENABLE_OPENGL
+    GLEnable blend(GL_BLEND);
+    glBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);
+    canvas.Select(Brush(fill_color.WithAlpha(90)));
+    canvas.SelectBlackPen();
+    RenderFAISectors(canvas, projection, task);
+#else
+    BufferCanvas buffer_canvas;
+    buffer_canvas.set(canvas);
+    buffer_canvas.ClearWhite();
+#ifdef HAVE_HATCHED_BRUSH
+    buffer_canvas.Select(airspace_look.brushes[3]);
+    buffer_canvas.SetTextColor(fill_color);
+    buffer_canvas.SetBackgroundColor(COLOR_WHITE);
+#else
+    buffer_canvas.Select(Brush(fill_color));
+#endif
+    buffer_canvas.SelectNullPen();
+    RenderFAISectors(buffer_canvas, projection, task);
+    canvas.CopyAnd(buffer_canvas);
+
+    canvas.SelectHollowBrush();
+    canvas.SelectBlackPen();
+    RenderFAISectors(canvas, projection, task);
+#endif
+  }
+
   OZRenderer ozv(task_look, airspace_look, settings_map.airspace);
   TaskPointRenderer tpv(canvas, projection, task_look,
                         task.GetTaskProjection(),
@@ -90,13 +175,15 @@ PaintTask(Canvas &canvas, const PixelRect &rc, const OrderedTask &task,
           const MapSettings &settings_map,
           const TaskLook &task_look,
           const AirspaceLook &airspace_look,
-          const RasterTerrain *terrain, const Airspaces *airspaces)
+          const RasterTerrain *terrain, const Airspaces *airspaces,
+          bool fai_sectors)
 {
   /* TODO: check location_available in ChartProjection */
   ChartProjection projection(rc, task, location);
   PaintTask(canvas, projection, task, location_available, location,
             settings_map,
-            task_look, airspace_look, terrain, airspaces);
+            task_look, airspace_look, terrain, airspaces,
+            fai_sectors);
 }
 
 void
@@ -112,5 +199,6 @@ PaintTaskPoint(Canvas &canvas, const PixelRect &rc,
   ChartProjection projection(rc, point, point.GetLocation());
   PaintTask(canvas, projection, task, location_available, location,
             settings_map,
-            task_look, airspace_look, terrain, airspaces);
+            task_look, airspace_look, terrain, airspaces,
+            false);
 }
